# econ-sim

./: .gitignore  CLAUDE.md  Cargo.toml  index.html
.github/workflows/: deploy.yml
deploy/sprite/: README.md  deploy.sh
plans/: 001-noot-economy.md  002-transporters.md  003-durable-goods-death-pause.md  004-route-learning.md  005-surplus-pricing-merchants.md  006-hunger-pid.md  007-emergent-ownership-unified-noots.md  008-overlays-ownership-visuals.md  009-element-icons.md  010-continuous-terrain.md  011-noot-overlays-channels-ewma-font.md  012-explore-temperament-money-sink.md  013-income-controller-save-load.md  014-food-storage-learning-by-doing.md  015-full-state-save-load.md  016-save-migration-system.md  017-clustered-deposits.md  018-action-selection-no-seeding.md  019-actor-critic-policy.md  020-committed-options-and-trade-overlay.md  021-resource-scarcity-and-overlay-cycler.md  022-shops-and-stack-indicator.md  023-generic-hex-ownership-and-refineries.md  024-tap-to-inspect-hex.md  025-noot-names-and-reincarnation.md  026-persisted-rollup-graph-history.md  027-gps-taught-navigation.md  028-routes-traffic-overlay.md  029-chonky-structure-markers.md  030-roads-and-trade-centers.md  031-separated-resource-regions.md  032-leaderboard-server.md  033-sprite-deploy.md  INTENDED_FEATURES.md
src/: economy.rs  elements.rs  goods.rs  graph.rs  hex.rs  history.rs  icon.rs  leaderboard.rs  lib.rs  main.rs  movement.rs  noot.rs  policy.rs  rng.rs  save.rs  world.rs  worldname.rs
