[package]
name = "econ-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.18"

# Web-only: hide the loading screen once Bevy boots, and draw an entropy seed.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "DomTokenList", "Storage", "Location"] }
js-sys = "0.3"

# Build dependencies with optimizations even in dev so the sim runs smoothly,
# while keeping our own crate fast to recompile.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Smaller, faster wasm for the deployed build.
[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
